--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Blog
-subtitle: I specialize in the rhythm of things 
+subtitle: I specialize in the rhythm of data
 use-site-title: true
 ---
 
