--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ I am passionate about extracting useful knowledge from data to solve business pr
 
 <p class="about-text">
 <span class="fa fa-file-pdf-o about-icon"></span>
-My <strong><a href="/CV.pdf" target="_blank" style="color:black;">CV</a> (updated 03/03/2019) </strong> page lists some of my work. You can learn more about my work via the <strong><a href="https://regressionist.github.io/projects" target="_blank" style="color:black;">projects</a> (updated 03/03/2019)</strong> page
+My <strong><a href="/CV.pdf" target="_blank" style="color:black; text-decoration: underline;">CV</a> (updated 03/03/2019) </strong> page lists some of my work. You can learn more about my work via the <strong><a href="https://regressionist.github.io/projects" target="_blank" style="color:black; text-decoration: underline;">projects</a> (updated 03/03/2019)</strong> page
 </p>
 
 <p class="about-text">
