--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ Graduate Student at Center for Data Science, New York University
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
-I am passionate about extracting useful knowledge from data to solve business problems and formulating data mining solutions and evaluating the results in the context in which they will be used. I am also interested in deep learning and its application in (but not limited to) computer vision and NLP. I am particularly interested in explanatory modeling, predictive analytics, scaling up supervised learning problems, and economic analysis of data assets and data science strategies. Developing creative solutions to product problems and driving key product and business decisions with empirical insights and sophisticated metrics, experiments, and predictive models excites me. 
+I am passionate about extracting useful knowledge from data to solve business problems and formulating data mining solutions and evaluating the results in the context in which they will be used. I am particularly interested in explanatory modeling, predictive analytics, scaling up supervised learning problems, and economic analysis of data assets and data science strategies. Developing creative solutions to product problems and driving key product and business decisions with empirical insights and sophisticated metrics, experiments, and predictive models excites me. I am also interested in deep learning and its application in (but not limited to) computer vision and NLP.
 </p>
 
 <p class="about-text">
