--- a/Game/index.html
+++ b/Game/index.html
@@ -4,6 +4,6 @@
  <script type="text/javascript" src="lib/p5.min.js"></script>
  <script language="javascript" type="text/javascript" src="lib/p5.dom.js"></script>
   <script type="text/javascript" src="sketch.js"></script>
-  <script type="text/javascript" src="Obstacle.js"></script>
+  <script type="text/javascript" src="obstacle.js"></script>
   <script type="text/javascript" src="T-Rex.js"></script>
 </head>
