--- a/about.html
+++ b/about.html
@@ -14,7 +14,17 @@ Graduate Student at Center for Data Science, New York University
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
-I am passionate about extracting useful knowledge from data to solve business problems and formulating data mining solutions and evaluating the results in the context in which they will be used. I am particularly interested in explanatory modeling, predictive analytics, scaling up supervised learning problems, and economic analysis of data assets and data science strategies. Developing creative solutions to product problems and driving key product and business decisions with empirical insights and sophisticated metrics, experiments, and predictive models excites me. I am also interested in deep learning and its application in (but not limited to) computer vision and NLP
+
+A strong believer and practitioner of "Driving Impact through Data". Experienced in (and constantly learning):
+<ul>
+<li>Defining key business problems to be solved in ML terminology</li>
+<li>Driving key product and business decisions with empirical insights extracted from data</li>
+<li>Formulating mathematical approaches and gathering data to solve those problems</li>
+<li>Hypothesis generation and evaluation by applying advanced analytics to weigh and evaluate a panel of responses based on only relevant evidence</li>
+<li>Explanatory modeling, predictive modeling, optimization, and/or machine learning analytics techniques, scaling up supervised learning problems, and economic analysis of data assets and data science strategies</li>
+<li>Moving from reliance on structured, local data to the world of global, unstructured data</li>
+<li>Developing and analyzing conclusions, testing solutions and presenting to the client</li>
+</ul>
 </p>
 
 <p class="about-text">
