changing about me

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ Graduate Student at Center for Data Science, New York University
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
-A strong believer and practitioner of "Driving Impact through Data". Experienced in (and constantly learning) driving key product and business decisions with empirical insights extracted from data. Proficient in explanatory modeling, predictive modeling, optimization, and/or machine learning analytics techniques, scaling up supervised learning problems, and economic analysis of data assets and data science strategies
+Experienced in (and constantly learning) driving key product and business decisions with empirical insights extracted from data. Proficient in explanatory modeling, predictive modeling, optimization, and/or machine learning analytics techniques, scaling up supervised learning problems, and economic analysis of data assets and data science strategies
 </p>
 
 <p class="about-text">
