--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: About
-subtitle: "Who Am I?"
+subtitle: "Inside information"
 css: "/css/aboutme.css"
 ---
 
@@ -24,7 +24,7 @@ My <strong><a href="/CV.pdf" target="_blank" style="color:black; text-decoration
 
 <p class="about-text">
 <span class="fa fa-globe about-icon"></span>
-Born in <i>Chandigarh, India</i>. Did my schooling from <i>Chandigarh</i> and Bachelors from <i>IIT Delhi, India</i>. I moved to <i>New York</i> in 2018 to pursue MS in Data Science at NYU
+Born in Chandigarh, India. Did my schooling from Chandigarh and Bachelors from IIT Delhi, India. I moved to New York in 2018 to pursue MS in Data Science at NYU
 </p>
 
 
