--- a/linalgFall19/index.html
+++ b/linalgFall19/index.html
@@ -1,11 +1,10 @@
----
-layout: minimal
-title: Optimization and Computational Linear Algebra Recitation - Fall 2019
----
+
+<head><title>DS-GA 1014 Fall 2019</title></head>
+
 
 <body style='font-family:BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;'>
 
-<h3> DS-GA 1014 Fall 2019</h3>
+<h3>Optimization and Computational Linear Algebra Recitation - Fall 2019</h3>
 <br>
 
 
