--- a/about.html
+++ b/about.html
@@ -9,10 +9,16 @@ css: "/css/aboutme.css"
 
 <p class="about-text">
 <span class="fa fa-fa fa-institution about-icon"></span>
-Graduate Student at Center for Data Science, New York University
+I’m a Research Engineer at Bloomberg with a strong foundation in machine learning and over five years of experience in the industry.
+My professional journey has immersed me in the worlds of software design, systems architecture, and cutting-edge AI algorithms.
+But beyond the code and data, I’m deeply fascinated by the human side of knowledge —- philosophy, psychology, and sociology.
+
+This blog is my space to explore these seemingly diverse interests.
+Whether it’s unpacking a technical concept, reflections on the ideas of great philosophers, or musings on consciousness and society, I write to learn, question, and share. 
+If you're curious about how an engineering mind introspects about self and society, you're in the right place.
 </p>
 
-<p class="about-text">
+<!-- <p class="about-text">
 <span class="fa fa-code about-icon"></span>
 Experienced in (and constantly learning) driving key product and business decisions with empirical insights extracted from data. Proficient in explanatory modeling, predictive modeling, optimization, and/or machine learning analytics techniques, scaling up supervised learning problems, and economic analysis of data assets and data science strategies
 </p>
@@ -25,7 +31,7 @@ My <strong><a href="/files/Ashwin_Bhola_Resume.pdf" target="_blank" style="color
 <p class="about-text">
 <span class="fa fa-globe about-icon"></span>
 Born in Chandigarh, India. Did my schooling from Chandigarh and Bachelors from IIT Delhi, India. I moved to New York in 2018 to pursue MS in Data Science at NYU
-</p>
+</p> -->
 
 
 </div>
