--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Blog
-subtitle: I specialize in the rhythm of data
+subtitle: "Between circuits and consciousness, I find my questions"
 use-site-title: true
 ---
 
