--- a/about.html
+++ b/about.html
@@ -1,17 +1,18 @@
 ---
 layout: page
-title: About
-subtitle: "Inside information"
+title: About Me
+subtitle: "The person behind the writings"
 css: "/css/aboutme.css"
 ---
 
 <div id="aboutme-section">
 
 <p class="about-text">
-<span class="fa fa-fa fa-institution about-icon"></span>
+<!-- <span class="fa fa-fa fa-institution about-icon"></span> -->
 I’m a Research Engineer at Bloomberg with a strong foundation in machine learning and over five years of experience in the industry.
 My professional journey has immersed me in the worlds of software design, systems architecture, and cutting-edge AI algorithms.
 But beyond the code and data, I’m deeply fascinated by the human side of knowledge —- philosophy, psychology, and sociology.
+<br><br>
 
 This blog is my space to explore these seemingly diverse interests.
 Whether it’s unpacking a technical concept, reflections on the ideas of great philosophers, or musings on consciousness and society, I write to learn, question, and share. 
