--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ css: "/css/aboutme.css"
 <!-- <span class="fa fa-fa fa-institution about-icon"></span> -->
 I’m a Research Engineer at Bloomberg with a strong foundation in machine learning and over five years of experience in the industry.
 My professional journey has immersed me in the worlds of software design, systems architecture, and cutting-edge AI algorithms.
-But beyond the code and data, I’m deeply fascinated by the human side of knowledge —- philosophy, psychology, and sociology.
+But beyond the code and data, I’m deeply drawn to the human side of knowledge — philosophy, psychology, and sociology.
 <br><br>
 
 This blog is my space to explore these seemingly diverse interests.
